--- a/app/src/main/res/layout/popup_layout.xml
+++ b/app/src/main/res/layout/popup_layout.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:background="@android:color/transparent">
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
@@ -18,116 +18,32 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="450dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/pop"
             android:orientation="vertical"
             android:padding="24dp">
 
             <LinearLayout
-                android:layout_width="350dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="🔴"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/inside"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:text="REC"
-                    android:textColor="#FF0000"
-                    android:textSize="20sp" />
-
-            </LinearLayout>
-
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="5dp">
-
-            </Space>
-            <LinearLayout
                 android:id="@+id/textureViewContainer"
-                android:layout_width="350dp"
+                android:layout_width="320dp"
                 android:layout_height="270dp"
-                android:layout_gravity="center_vertical"
+                android:layout_gravity="center_horizontal"
                 android:orientation="horizontal">
 
-                <VideoView
-                    android:id="@+id/textureView"
+                <WebView
+                    android:id="@+id/webview"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
             </LinearLayout>
 
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="5dp">
-            </Space>
-
-            <LinearLayout
-                android:layout_width="350dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/loudsp"
-                    android:layout_width="20dp"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="8dp"
-                    android:background="@drawable/loudsp" />
-
-                <TextView
-                    android:id="@+id/micro"
-                    android:layout_width="20dp"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="8dp"
-                    android:background="@drawable/micro"
-                    />
-
-                <TextView
-                    android:id="@+id/time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="70dp"
-                    android:text="02-11-2023 16:50:25"
-                    android:textSize="20dp"
-                    android:textColor="#000000"
-                    />
-
-            </LinearLayout>
-
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="10dp"></Space>
-
-            <LinearLayout
-                android:id="@+id/sau"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <Button
-                    android:id="@+id/button"
-                    android:layout_width="50dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="❌"
-                    android:textSize="15sp"></Button>
-
-            </LinearLayout>
-
+            <Button
+                android:id="@+id/button"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="❌"
+                android:textSize="15sp" />
         </LinearLayout>
-
     </androidx.cardview.widget.CardView>
-
 </LinearLayout>
